--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "use-debounce": "^7.0.1",
     "uuid": "^8.3.2"
   }
 }
