--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Must-have config for Webpack 5",
   "main": "main.tsx",
   "scripts": {
-    "test": "exit 0",
+    "test": "jest",
     "start": "json-server --watch ./db.json",
     "serve": "./node_modules/.bin/webpack serve --open --config webpack.devServer.js",
     "build-prod": "./node_modules/.bin/webpack --mode production --config webpack.prod.js",
@@ -41,8 +41,11 @@
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^12.1.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.176",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
@@ -51,8 +54,11 @@
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-jsx-classnames-advanced": "^1.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "browserlist": "^1.0.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -74,6 +80,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
+    "jest": "^27.4.7",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "lint-staged": "^11.1.1",
@@ -91,6 +98,7 @@
     "preload-webpack-plugin": "^3.0.0-beta.4",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.1.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "shx": "^0.3.3",
@@ -128,6 +136,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "ts-node": "^10.4.0",
     "use-debounce": "^7.0.1",
     "uuid": "^8.3.2"
   }
