--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "@testing-library/user-event": "^13.5.0",
     "jsonwebtoken": "^8.5.1",
     "ngx-input-loader": "0.0.7",
+    "npm": "^6.13.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
